Expanded spreadsheets api with similar features to documents api
